src/test/ui/exclusive-range/exclusive_range_pattern_syntax_collision2.stderr
error: unexpected token: `]`
  --> $DIR/exclusive_range_pattern_syntax_collision2.rs:5:15
   |
LL |         [_, 99..] => {}, //~ ERROR unexpected token: `]`
   |               ^^

error: aborting due to previous error

